Update guide section

--- a/nahbah-frontend/src/i18n/locales/en/components.json
+++ b/nahbah-frontend/src/i18n/locales/en/components.json
@@ -7,16 +7,18 @@
     "home": "HOME",
     "aboutUs": "ABOUT US",
     "guide": "GUIDE",
-    "essentials": "ESSENTIALS",
-    "designs": "DESIGNS",
+    "principles": "PRINCIPLES",
+    "materials": "MATERIALS",
+    "plans": "PLANS",
     "contribute": "CONTRIBUTE"
   },
   "footer": {
     "home": "Home",
     "aboutUs": "About Us",
     "guide": "Guide",
-    "essentials": "Essentials",
-    "designs": "Designs",
+    "principles": "Principles",
+    "materials": "Materials",
+    "plans": "Plans",
     "contribute": "Contribute",
     "description": "Helping people create stable, dignified homes through shared design and community support.",
     "quickLinks": "Quick Links",
