--- a/nahbah-frontend/src/i18n/locales/hu/components.json
+++ b/nahbah-frontend/src/i18n/locales/hu/components.json
@@ -7,17 +7,19 @@
     "home": "KEZDŐLAP",
     "aboutUs": "RÓLUNK",
     "guide": "ÚTMUTATÓ",
-    "essentials": "ALAPISMERETEK",
-    "designs": "TERVEK",
-    "contribute": "KÖZREMŰKÖDÉS"
+    "principles": "ALAPELVEK",
+    "materials": "ANYAGOK",
+    "plans": "TERVTÁR",
+    "contribute": "FELTÖLTÉS"
   },
   "footer": {
     "home": "Kezdőlap",
     "aboutUs": "Rólunk",
     "guide": "Útmutató",
-    "essentials": "Alapismeretek",
-    "designs": "Tervek",
-    "contribute": "Közreműködés",
+    "principles": "Alapelvek",
+    "materials": "Anyagok",
+    "plans": "Tervtár",
+    "contribute": "Feltöltés",
     "description": "Segítünk az embereknek stabil, méltó otthonokat teremteni közös tervezéssel és közösségi támogatással.",
     "quickLinks": "Gyors Linkek",
     "resources": "Források",
