Add principles section

--- a/nahbah-frontend/src/i18n/locales/en/pages.json
+++ b/nahbah-frontend/src/i18n/locales/en/pages.json
@@ -11,340 +11,9 @@
       "viewDesignsBtn": "VIEW DESIGNS"
     }
   },
-  "essentials": {
-    "backgroundText": "Essentials",
-    "title": "What does a home need?",
-    "description": "Learn what makes a shelter into a home, from weather protection to finding and repurposing materials around you.",
-    "materials": "Materials",
-    "weatherProtectionTab": "Weather Protection",
-    "materialsSection": {
-      "title": "USEFUL MATERIALS AROUND US",
-      "description": "Building and making a house more comfortable is not only possible with building materials. In big cities, we can find many packaging materials that are suitable for making our temporary shelter cozier, more comfortable, and safer.",
-      "imageCaption": "Self made house from door leaves. Facade is covered with PVC flooring. Built by Lajos (65)",
-      "availableMaterials": "AVAILABLE MATERIALS & THEIR USES",
-      "availableDescription": "Navigate your surroundings with resourcefulness. Discover how everyday objects can be transformed into essential shelter components.",
-      "viewDetails": "View Details",
-      "repurpose": {
-        "title": "HOW TO REPURPOSE MATERIALS",
-        "description": "Transform discarded materials into essential shelter components.",
-        "structural": {
-          "title": "Structural Elements",
-          "description": "Materials like wood crates and beverage cans can be repurposed for walls, roof, and foundational elements.",
-          "items": [
-            "Roof shingles from cans",
-            "Rain screens from crates",
-            "Wall frames from scrap wood"
-          ]
-        },
-        "insulation": {
-          "title": "Insulation & Protection",
-          "description": "Soft and porous materials can provide crucial insulation against cold and heat loss.",
-          "items": [
-            "Heat insulation from cardboard",
-            "Thermal protection with styrofoam",
-            "Water barriers using plastic sheets"
-          ]
-        },
-        "weather": {
-          "title": "Weather Protection",
-          "description": "Securing shelter against wind, rain, and moisture requires specialized barriers.",
-          "items": [
-            "Windproof membranes from tents",
-            "Vapor barriers from plastic sheets",
-            "Waterproofing from tarpaulins"
-          ]
-        }
-      },
-      "lookAround": {
-        "title": "Look Around with New Eyes",
-        "description": "Very often, we don't even think that a carpet can be used for more than walking on, or that beverage cans could also be useful if there are a lot of them. Remember to see the potential in everyday discarded items."
-      },
-      "materials": {
-        "paper": {
-          "title": "PAPER",
-          "function": "Cardboard, Packing box",
-          "rawMaterial": "Paper",
-          "whereToFind": "Bicycle shops, Shopping malls",
-          "use": "Heat insulation (keep it dry)",
-          "examples": ["Heat insulation made of cardboards"]
-        },
-        "metals": {
-          "title": "METALS",
-          "function": "Beverage can",
-          "rawMaterial": "Aluminum, Iron",
-          "whereToFind": "Around pubs, Parks",
-          "use": "Facade cladding, Roofing",
-          "examples": ["Roof shingles made of beverage cans"]
-        },
-        "textiles": {
-          "title": "TEXTILES",
-          "function": "Tents",
-          "rawMaterial": "Textile",
-          "whereToFind": "Festivals' venues, Beaches",
-          "use": "Vapor barrier membrane, Windproof membrane, Secondary layer under roof shingles",
-          "examples": [
-            "Windproof membrane made of tents",
-            "Vapor barrier made of tents"
-          ]
-        },
-        "plastics": {
-          "title": "PLASTICS",
-          "function": "Protective packaging",
-          "rawMaterial": "Styrofoam",
-          "whereToFind": "Electronic stores, Shopping malls",
-          "use": "Thermal insulation",
-          "examples": [
-            "Thermal insulation made of styrofoam packaging",
-            "Roof shingles made of PVC flooring"
-          ]
-        },
-        "wood": {
-          "title": "WOOD",
-          "function": "Provide dry ground",
-          "rawMaterial": "Wood",
-          "whereToFind": "Market halls, Markets, Grocery stores",
-          "use": "Rain screen, Facade, Roof shingles",
-          "examples": ["Rain screen facade made of fruit crates"]
-        }
-      },
-      "modal": {
-        "information": "Information",
-        "examples": "Examples",
-        "rawMaterial": "Raw material",
-        "whereToFind": "Where to find",
-        "useInShelter": "Use in shelter",
-        "examplesOfUse": "Examples of use",
-        "infoNote": "This material can be found in common urban environments and repurposed with minimal tools.",
-        "examplesNote": "For optimal results, clean and prepare materials before repurposing. Remove labels, wash surfaces, and test for structural integrity."
-      }
-    },
-    "weatherProtection": {
-      "title": "HOW TO PROTECT FROM WEATHER",
-      "description": "Weather protection is essential for turning a basic shelter into a safe, comfortable home. Learn how to protect against cold, moisture, wind, and rain using accessible materials.",
-      "protectionMethods": "Protection Methods",
-      "preview": {
-        "learnMore": "Learn More",
-        "warmth": {
-          "title": "Warmth",
-          "subtitle": "Thermal insulation"
-        },
-        "stayingDry": {
-          "title": "Staying Dry",
-          "subtitle": "Moisture control"
-        },
-        "windproofing": {
-          "title": "Windproofing",
-          "subtitle": "Draft protection"
-        },
-        "dryGround": {
-          "title": "Dry Ground",
-          "subtitle": "Foundation protection"
-        }
-      },
-      "warmth": {
-        "title": "Warmth",
-        "subtitle": "Thermal insulation techniques",
-        "whyItMatters": {
-          "title": "Why It Matters",
-          "description": "Thermal insulation protects against the cold and can reduce heat loss by up to 70%. Proper insulation is crucial for comfort and sustainable living in your shelter."
-        },
-        "keyTechniques": "Key Techniques",
-        "tips": {
-          "exterior": {
-            "title": "Exterior Insulation",
-            "description": "Place thermal insulation on the outside of walls like a winter coat for your building."
-          },
-          "coverage": {
-            "title": "Full Coverage",
-            "description": "Wrap the entire building - sides, top and bottom. The ceiling needs the thickest insulation."
-          },
-          "frame": {
-            "title": "Frame Building Technique",
-            "description": "For frame buildings, insulation can go inside walls but must be protected with a vapor barrier."
-          }
-        },
-        "materialsYouCanUse": "Materials You Can Use",
-        "materials": {
-          "styrofoam": "Styrofoam",
-          "tentFabric": "Tent Fabric",
-          "cardboard": "Cardboard"
-        }
-      },
-      "stayingDry": {
-        "title": "Staying Dry",
-        "subtitle": "Moisture control systems",
-        "whyItMatters": {
-          "title": "Why It Matters",
-          "description": "Vapor barriers protect against steam from cooking, washing, and breathing. Without proper moisture control, condensation can destroy insulation and damage your shelter's structure."
-        },
-        "keyTechniques": "Key Techniques",
-        "tips": {
-          "layered": {
-            "title": "Layered Wall Protection",
-            "description": "Use vapor barriers in walls with multiple layers to prevent moisture damage."
-          },
-          "installation": {
-            "title": "Proper Installation",
-            "description": "Overlap vapor barrier pieces by 15cm and seal with tape when possible."
-          },
-          "interior": {
-            "title": "Interior Wall Options",
-            "description": "Cover interior walls with recycled materials like door panels or carpet."
-          }
-        },
-        "materialsYouCanUse": "Materials You Can Use",
-        "materials": {
-          "tentFabric": "Tent Fabric",
-          "pvcFlooring": "PVC Flooring",
-          "inflatableMattress": "Inflatable Mattress"
-        }
-      },
-      "windproofing": {
-        "title": "Windproofing",
-        "subtitle": "Draft protection systems",
-        "whyItMatters": {
-          "title": "Why It Matters",
-          "description": "A windproof layer prevents drafts that can make your shelter uncomfortable even when well insulated. It maintains interior temperature, reduces heat loss, and creates a stable indoor environment essential for comfort and energy efficiency."
-        },
-        "keyTechniques": "Key Techniques",
-        "tips": {
-          "exterior": {
-            "title": "Exterior Membrane Installation",
-            "description": "Fix windproof membrane to the exterior frame using staples, nails, or strong adhesive for maximum draft protection."
-          },
-          "sealing": {
-            "title": "Seal All Joints",
-            "description": "Glue membrane pieces together with double-sided tape and seal all seams to prevent wind penetration and air leaks."
-          },
-          "breathability": {
-            "title": "Maintain Breathability",
-            "description": "Ensure the windproof layer allows some vapor to pass through for moisture escape while blocking drafts effectively."
-          }
-        },
-        "materialsYouCanUse": "Materials You Can Use",
-        "materials": {
-          "tentFabric": "Tent Fabric",
-          "tarpMaterial": "Tarp Material",
-          "plasticSheeting": "Plastic Sheeting"
-        }
-      },
-      "dryGround": {
-        "title": "Dry Ground",
-        "subtitle": "Foundation protection techniques",
-        "whyItMatters": {
-          "title": "Why It Matters",
-          "description": "Ground moisture is one of the most damaging forces for any shelter. Water from rain, snow, and ground saturation can destroy materials, create unhealthy conditions, and make your shelter uninhabitable. Proper elevation and drainage are essential for long-term success."
-        },
-        "keyTechniques": "Key Techniques",
-        "tips": {
-          "elevate": {
-            "title": "Elevate Your Structure",
-            "description": "Raise the building off the ground using concrete blocks, crates, or any sturdy materials to prevent ground moisture infiltration."
-          },
-          "drainage": {
-            "title": "Create Proper Drainage",
-            "description": "Install sloped surfaces and channels to direct water away from the foundation and prevent pooling around the structure."
-          },
-          "roofing": {
-            "title": "Use Pitched Roofing",
-            "description": "Angled roofs help water run off effectively instead of pooling and causing leaks or structural damage."
-          }
-        },
-        "materialsYouCanUse": "Materials You Can Use",
-        "materials": {
-          "metalCans": "Metal Cans",
-          "woodCrates": "Wood Crates",
-          "plasticBottles": "Plastic Bottles",
-          "concreteBlocks": "Concrete Blocks"
-        }
-      }
-    }
-  },
-  "about": {
-    "hero": {
-      "backgroundText": "About",
-      "title": "Reimagining Home & Shelter",
-      "subtitle": "Not a House, but a Home – We believe in the power of self-built spaces to create stability and dignity. Our goal is to support, inspire, and empower people to build homes that truly feel like home.",
-      "paragraph1": "Housing is a fundamental right, yet many people are forced to create their own shelters outside traditional systems. This web application is a resource for those who build homes from found materials, as well as for advocates and architects working in solidarity with unhoused communities.",
-      "paragraph2": "A home is more than a shelter—it's a place of stability, privacy, and connection. Through design knowledge, creativity, and shared solutions, we support self-built housing as a pathway to dignity and security.",
-      "learnMoreBtn": "Learn More"
-    }
-  },
-  "designsLibrary": {
-    "hero": {
-      "backgroundText": "Design Library",
-      "titlePart1": "Sustainable Shelters",
-      "titleHighlight": "Design Collection",
-      "description": "Browse our curated collection of innovative designs that transform found materials into essential shelter components.",
-      "selectedCount": "design(s) selected for your booklet",
-      "imageAlt": "Design Library"
-    },
-    "filters": {
-      "title": "Filters",
-      "materialSelection": "Material Selection",
-      "searchMaterials": "Search materials...",
-      "materials": "Materials",
-      "clearAll": "Clear all",
-      "noResultsFor": "No materials found matching \"{{searchTerm}}\"",
-      "noMaterials": "No materials available",
-      "activeFilters": "Active Filters",
-      "filteringBy": "Filtering by {{count}} material",
-      "filteringBy_plural": "Filtering by {{count}} materials",
-      "reset": "Reset"
-    },
-    "content": {
-      "title": "Innovative Designs",
-      "showing": "Showing {{count}} design",
-      "showing_plural": "Showing {{count}} designs",
-      "showingWithFilters": "Showing {{count}} design for your selected materials",
-      "showingWithFilters_plural": "Showing {{count}} designs for your selected materials",
-      "clearFilters": "Clear filters"
-    },
-    "noResults": {
-      "title": "No designs found",
-      "withFilters": "We couldn't find any designs matching your current material selection.",
-      "noDesigns": "No designs are currently available in our library.",
-      "clearAllFilters": "Clear all filters"
-    },
-    "mobile": {
-      "viewBooklet": "VIEW YOUR BOOKLET"
-    },
-    "loading": "Loading sustainable designs...",
-    "errors": {
-      "loadFailed": "Failed to load designs. Please try again later.",
-      "tryAgain": "Try Again"
-    },
-    "bookletBuilder": {
-      "title": "Your Booklet",
-      "selectedCount": "{{count}} design selected for your custom booklet",
-      "selectedCount_plural": "{{count}} designs selected for your custom booklet",
-      "noDesigns": "No designs selected yet",
-      "downloadBooklet": "Download Booklet",
-      "generating": "Generating...",
-      "generateError": "Failed to generate booklet. Please try again later."
-    },
-    "designCard": {
-      "selected": "Selected",
-      "add": "Add",
-      "viewDetails": "View details for {{title}}",
-      "closeDialog": "Close dialog",
-      "materialDesign": "{{material}} Design",
-      "tabs": {
-        "information": "Information",
-        "details": "Details"
-      },
-      "materialRequired": "Material Required",
-      "dateAdded": "Date Added",
-      "description": "Description",
-      "contributor": "Contributor",
-      "constructionNote": "This design can be constructed using common tools and techniques. Download the design file for detailed instructions.",
-      "designSpecifications": "Design Specifications",
-      "previewDesignFile": "PREVIEW DESIGN FILE",
-      "practicalSolution": "This design provides a practical solution for shelter construction using {{material}} materials.",
-      "optimizationNote": "For optimal results, ensure materials are clean and structurally sound. Test construction techniques on a small scale before full implementation.",
-      "close": "Close",
-      "removeFromBooklet": "Remove from Booklet",
-      "addToBooklet": "Add to Booklet"
-    }
+  "materials": {
+    "backgroundText": "Materials",
+    "title": "Materials",
+    "description": "Under the MATERIALS menu item, you can find information about the possible uses of some important raw materials."
   }
 }
