--- a/nahbah-frontend/src/i18n/locales/hu/materials.json
+++ b/nahbah-frontend/src/i18n/locales/hu/materials.json
@@ -66,7 +66,7 @@
     "imageCaption": "Ajtólapokból készült ház",
     "availableMaterials": "Anyagkategóriák",
     "availableDescription": "Kattints az egyes anyagokra, hogy többet megtudj róla",
-    "viewDetails": "Részletek megtekintése →",
+    "viewDetails": "Részletek megtekintése",
 
     "materials": {
       "paper": {
